--- a/Virtus/MainWindow.xaml
+++ b/Virtus/MainWindow.xaml
@@ -97,7 +97,7 @@
         <!--#endregion-->
 
         <!--#region Content-->
-        <ContentControl Grid.Row="1" Grid.Column="1"/>
+        <ContentControl Grid.Row="1" Grid.Column="1" Margin="0,0,0,10" Content="{Binding MainContent, Converter={local:ApplicationPageValueConverter}}" />
         <!--#endregion-->
 
     </Grid>
