--- a/Virtus/UserControls/Register/GeneralDataUserControl.xaml
+++ b/Virtus/UserControls/Register/GeneralDataUserControl.xaml
@@ -31,8 +31,9 @@
             <TextBlock Grid.Row="1" Text="E-mail" Style="{StaticResource TextBlockStyle}" />
             <TextBlock Grid.Row="2" Text="Site" Style="{StaticResource TextBlockStyle}" />
 
-            <ComboBox Grid.Column="1" Height="25" 
-                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:TypeOfPerson}}}" />
+            <ComboBox Grid.Column="1"
+                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:TypeOfPerson}}}"
+                      Style="{StaticResource DefaultComboBox}"/>
             <TextBox Text="{Binding Client.Email, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.Site}" Grid.Column="1" Grid.Row="2" />
         </Grid>
@@ -53,8 +54,9 @@
             <TextBlock Grid.Row="1" Text="CPF" Style="{StaticResource TextBlockStyle}" />
             <TextBlock Grid.Row="2" Text="Telefone" Style="{StaticResource TextBlockStyle}" />
 
-            <ComboBox Grid.Column="1" Height="25"
-                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:Situation}}}"/>
+            <ComboBox Grid.Column="1"
+                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:Situation}}}"
+                      Style="{StaticResource DefaultComboBox}"/>
             <TextBox Text="{Binding Client.CpfOrCnpj}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.PhoneNumber}" Grid.Column="1" Grid.Row="2" />
         </Grid>
