--- a/Virtus/UserControls/Register/GeneralDataUserControl.xaml
+++ b/Virtus/UserControls/Register/GeneralDataUserControl.xaml
@@ -8,11 +8,11 @@
              mc:Ignorable="d"
              d:DesignHeight="150" d:DesignWidth="1280">
 
-    <Grid HorizontalAlignment="Center">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300" />
-            <ColumnDefinition Width="270" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
         <!-- Tipo, E-mail, Site -->
@@ -33,7 +33,8 @@
 
             <ComboBox Grid.Column="1"
                       ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:TypeOfPerson}}}"
-                      Style="{StaticResource DefaultComboBox}"/>
+                      Style="{StaticResource DefaultComboBox}"
+                      MinWidth="150"/>
             <TextBox Text="{Binding Client.Email, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.Site}" Grid.Column="1" Grid.Row="2" />
         </Grid>
@@ -56,7 +57,8 @@
 
             <ComboBox Grid.Column="1"
                       ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:Situation}}}"
-                      Style="{StaticResource DefaultComboBox}"/>
+                      Style="{StaticResource DefaultComboBox}"
+                      MinWidth="150"/>
             <TextBox Text="{Binding Client.CpfOrCnpj}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.PhoneNumber}" Grid.Column="1" Grid.Row="2" />
         </Grid>
@@ -77,7 +79,7 @@
             <TextBlock Grid.Row="1" Text="Data de Nascimento" Style="{StaticResource TextBlockStyle}" />
             <TextBlock Grid.Row="2" Text="Celular" Style="{StaticResource TextBlockStyle}" />
 
-            <TextBox Text="{Binding Client.Name}" Grid.Column="1" Width="200"/>
+            <TextBox Text="{Binding Client.Name}" Grid.Column="1" />
             <TextBox Text="{Binding Client.DateOfBirth}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.CellPhone}" Grid.Column="1" Grid.Row="2" />
         </Grid>
