--- a/Virtus/UserControls/Register/RegisterUserControl.xaml
+++ b/Virtus/UserControls/Register/RegisterUserControl.xaml
@@ -14,6 +14,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
+        <!-- Menu-->
         <StackPanel Orientation="Horizontal" Background="{StaticResource DarkBlueBrush}">
             <TextBlock FontSize="{StaticResource FontSizeRegular}" 
                        Foreground="{StaticResource WhiteBrush}" 
@@ -40,29 +41,11 @@
                        Text="Transportadoras" />
         </StackPanel>
         
+        <!-- Register client-->
         <local:RegisterClientsUserControl Grid.Row="1" Margin="20,20,0,0"/>
 
-        <Button Content="SALVAR" 
-                HorizontalAlignment="Right" 
-                Width="150" 
-                Grid.Row="2" 
-                Style="{StaticResource DefaultButton}" 
-                Margin="0,0,20,0"/>
+        
 
-        <StackPanel Grid.Row="3" Margin="0,15,0,0">
-            <TextBlock Text="Clientes" Foreground="{StaticResource WhiteBrush}" FontSize="{StaticResource FontSizeLarge}" Margin="0,0,0,5" />
-            
-            <DataGrid AutoGenerateColumns="False">
-                <DataGrid.Columns >
-                    <DataGridTextColumn Header="Nome"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Tipo"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Situação"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Telefone"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Celular"></DataGridTextColumn>
-                    <DataGridTextColumn Header="E-mail"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Data de cadastro"></DataGridTextColumn>
-                </DataGrid.Columns>
-            </DataGrid>
-        </StackPanel>
+        
     </Grid>
 </UserControl>
