--- a/Virtus/UserControls/Register/GeneralDataUserControl.xaml
+++ b/Virtus/UserControls/Register/GeneralDataUserControl.xaml
@@ -34,7 +34,8 @@
             <ComboBox Grid.Column="1"
                       ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:TypeOfPerson}}}"
                       Style="{StaticResource DefaultComboBox}"
-                      MinWidth="150"/>
+                      MinWidth="150"
+                      SelectedItem="{Binding Client.Type}" SelectedIndex="0"/>
             <TextBox Text="{Binding Client.Email, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.Site}" Grid.Column="1" Grid.Row="2" />
         </Grid>
@@ -58,7 +59,8 @@
             <ComboBox Grid.Column="1"
                       ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:Situation}}}"
                       Style="{StaticResource DefaultComboBox}"
-                      MinWidth="150"/>
+                      MinWidth="150"
+                      SelectedItem="{Binding Client.Situation}" SelectedIndex="0"/>
             <TextBox Text="{Binding Client.CpfOrCnpj}" Grid.Column="1" Grid.Row="1" />
             <TextBox Text="{Binding Client.PhoneNumber}" Grid.Column="1" Grid.Row="2" />
         </Grid>
