--- a/Virtus/UserControls/RegisterUserControl.xaml
+++ b/Virtus/UserControls/RegisterUserControl.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="600" d:DesignWidth="1280">
 
     <UserControl.DataContext>
-        <local:RegisterClientsViewModel/>
+        <local:RegisterViewModel />
     </UserControl.DataContext>
     
     <Grid>
